--- a/jdbcapp/jdbcapp/src/main/resources/application.properties
+++ b/jdbcapp/jdbcapp/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.application.name=jdbcapp
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/testdb
+spring.datasource.url=jdbc:mariadb://localhost:3306/company
 spring.datasource.username=root
 spring.datasource.password=root
 
 #server.port=8081
+
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.dw.jdbcapp.model,com.dw.jdbcapp.dto
+mybatis.configuration.map-underscore-to-camel-case=true
