--- a/jdbcapp/jdbcapp/src/main/resources/application.properties
+++ b/jdbcapp/jdbcapp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=jdbcapp
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/company
+spring.datasource.url=jdbc:mariadb://localhost:3306/testdb
 spring.datasource.username=root
 spring.datasource.password=root
 
