--- a/gameshop_mybatis/src/main/resources/application.properties
+++ b/gameshop_mybatis/src/main/resources/application.properties
@@ -4,4 +4,8 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/gameshop2025
 spring.datasource.username=root
 spring.datasource.password=root
 
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.dw.gameshop_mybatis.model,com.dw.gameshop_mybatis.dto
+mybatis.configuration.map-underscore-to-camel-case=true
+
 spring.sql.init.mode=never
