--- a/gameshop_mybatis/src/main/resources/application.properties
+++ b/gameshop_mybatis/src/main/resources/application.properties
@@ -9,3 +9,13 @@ mybatis.type-aliases-package=com.dw.gameshop_mybatis.model,com.dw.gameshop_mybat
 mybatis.configuration.map-underscore-to-camel-case=true
 
 spring.sql.init.mode=never
+
+logging.level.org.springframework.web.bind=DEBUG
+logging.level.com.dw.gameshop_mybatis.controller=DEBUG
+
+
+
+
+
+
+
